// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Panel /> should handle props 1`] = `
<Panel
  className="test-class"
  color="white"
  contentColor="additional-red"
  icon={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
  inline={true}
>
  <div
    className="panel inline bg-color__white test-class"
    data-testid="panel"
  >
    <ForwardRef(InformationSVG)
      aria-hidden="true"
      className="icon"
      fill="#fb3a2f"
      height={20}
      width={16}
    >
      <svg
        aria-hidden="true"
        className="icon"
        fill="#fb3a2f"
        height={20}
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8 6.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zM8 5.5a1 1 0 100-2 1 1 0 000 2z"
        />
        <path
          clipRule="evenodd"
          d="M0 8a8 8 0 1116 0A8 8 0 010 8zm8-6a6 6 0 100 12A6 6 0 008 2z"
          fillRule="evenodd"
        />
      </svg>
    </ForwardRef(InformationSVG)>
    <div
      className="content color__additional-red"
    >
      Hello, world!
    </div>
  </div>
</Panel>
`;

exports[`<Panel /> should handle props 2`] = `
<Panel
  className="test-class"
  color="white"
  contentColor="additional-red"
  html="Lorem <i>ipsum</i> <b>dolor</b> sit."
  icon={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
  inline={true}
>
  <div
    className="panel inline bg-color__white test-class"
    data-testid="panel"
  >
    <ForwardRef(InformationSVG)
      aria-hidden="true"
      className="icon"
      fill="#fb3a2f"
      height={20}
      width={16}
    >
      <svg
        aria-hidden="true"
        className="icon"
        fill="#fb3a2f"
        height={20}
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8 6.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zM8 5.5a1 1 0 100-2 1 1 0 000 2z"
        />
        <path
          clipRule="evenodd"
          d="M0 8a8 8 0 1116 0A8 8 0 010 8zm8-6a6 6 0 100 12A6 6 0 008 2z"
          fillRule="evenodd"
        />
      </svg>
    </ForwardRef(InformationSVG)>
    <div
      className="content color__additional-red"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Lorem <i>ipsum</i> <b>dolor</b> sit.",
        }
      }
    />
  </div>
</Panel>
`;

exports[`<Panel /> should renders without props 1`] = `
<Panel>
  <div
    className="panel bg-color__gray4"
    data-testid="panel"
  >
    <div
      className="content color__gray87"
    />
  </div>
</Panel>
`;
